--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>Pages#home</h1>
+<div id="cover">
+  <div class="navbar-lewagon">
+    <div class="navbar-brand">
+  	  <%= image_tag %>
+      <h1>MyOldCar</h1>
+    </div>
+  </div>
+
 <p>Find me in app/views/pages/home.html.erb</p>
+</div>
