Navbar-brand class added in navbar component

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div id="cover">
   <div class="navbar-lewagon">
     <div class="navbar-brand">
-  	  <%= image_tag 'car.png' %>
+  	  <%= image_tag "car.png" %>
       <h1>MyOldCar</h1>
     </div>
   </div>
