--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,6 +6,12 @@
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
+.navbar-lewagon p {
+  font-family: $p-font;
+  font-weight: lighter;
+  margin-bottom: 2px;
+  margin-left: 8px;
+}
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
@@ -15,4 +21,5 @@
   font-size: 24px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
