--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-
+  <div class="yield">
     <%= yield %>
+  </div>
+  <footer>
     <div class="footer">
       <div class="footer-links">
         <a href="#"><i class="fab fa-github"></i></a>
@@ -24,8 +26,9 @@
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-linkedin"></i></a>
       </div>
-    <div class="footer-copyright">
-      Made with <i class="fas fa-heart"></i> at Le Wagon
-    </div>
+      <div class="footer-copyright">
+        Made with <i class="fas fa-heart"></i> at Le Wagon
+      </div>
+  </footer>
   </body>
 </html>
