--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,5 @@
-<p>Booking details</p>
+<h3>Booking details</h3>
+<%= @booking.car %>
 <%= @booking.start_date %>
 <%= @booking.end_date %>
 <%= @booking.amount %>
