--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,9 +1,16 @@
-<% @cars.each do |car| %>
-    <% car.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 150, width: 250, crop: :thumb, class: "rounded" %>
-    <% end %>
-  <h2>Description of the car</h2>
-  <li>Model: <%= car.model %></li>
-  <li>Year: <%= car.year %></li>
-  <li>Price: <%= car.price %></li>
-<% end %>
+<div class="container">
+  <div class="row" style="margin-top: 48px">
+    <div class="col-12 col-md-8 col-lg-4">
+      <% @cars.each do |car| %>
+        <% car.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 150, width: 250, crop: :thumb, class: "rounded" %>
+        <% end %>
+        <li>Model: <%= car.model %></li>
+        <li>Year: <%= car.year %></li>
+        <li>Price: <%= car.price %></li>
+        <br>
+        <br>
+     <% end %>
+    </div>
+  </div>
+</div>
