--- a/app/views/shared/_welcome.html.erb
+++ b/app/views/shared/_welcome.html.erb
@@ -1,10 +1,18 @@
-<h1>Welcome <%= current_user.username %> !</h1>
-<h3>Awesome, what would you like to do?</h3>
-<ul class="list-inline">
-  <%= link_to cars_path do %>
-    <li class="list-inline-item"><button type="button" class="btn btn-primary">See car listings</button></li>
-  <% end %>
-  <%= link_to new_car_path do %>
-   <li class="list-inline-item"><button type="button" class="btn btn-primary">Add a new listing</button></li>
-  <% end %>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-md-8 col-lg-8" style="margin-top: 72px">
+      <h1>Welcome <%= current_user.username %> !</h1>
+      <br>
+      <h3>Awesome, what would you like to do?</h3>
+      <br>
+      <ul class="list-inline">
+      <%= link_to cars_path do %>
+      <li class="list-inline-item"><button type="button" class="btn btn-primary">See car listings</button></li>
+      <% end %>
+      <%= link_to new_car_path do %>
+      <li class="list-inline-item"><button type="button" class="btn btn-primary">Add a new listing</button></li>
+    <% end %>
+    </ul>
+    </div>
+  </div>
+</div>
