--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -32,7 +32,7 @@
 
 
 <%= link_to "Edit", edit_car_path(@car) %> |
-<%= link_to "Back to vehicles list", cars_path %> |
+<%= link_to "Back to the vehicles list", cars_path %> |
 <%= link_to "Delete", car_path(@car), method: "delete" %>
 
 
