updating-index-view

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,16 +1,22 @@
 <% @cars.each do |car| %>
   <div class="card-trip mt-3 mx-auto">
-    <% car.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 150, width: 250, crop: :thumb, class: "rounded" %>
-    <% end %>
-    <div class="card-trip-infos">
-      <div>
-        <h2><%= car.name %></h2>
-        <h7>Year: <%= car.year %></h3>
-        <p>Short description here!</p>
+    <%= link_to car_path(car) do %>
+      <% if car.photos.attached? %>
+        <% car.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 150, width: 250, crop: :thumb, class: "rounded" %>
+        <% end %>
+      <% else %>
+        <%= image_tag "car.png" %>
+      <% end %>
+      <div class="card-trip-infos">
+        <div>
+          <h2><%= car.name %></h2>
+          <h7>Year: <%= car.year %></h3>
+          <p>Short description here!</p>
+        </div>
+        <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
+        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
       </div>
-      <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
-      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-    </div>
+    <% end %>
   </div>
 <% end %>
