--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,11 +5,11 @@
   width: 400px;
 }
 
-.card-trip > img {
+.card-thumbnail {
   height: 150px;
   width: 100%;
-  object-fit: cover;
-}
+  object-fit: fill;
+} 
 
 .card-trip h2 {
   font-size: 16px;
