--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,18 +1,37 @@
-<% @cars.each do |car| %>
-  <div class="card-trip mt-3 mx-auto">
-    <% car.photos.each do |photo| %>
-      <%= cl_image_tag photo.key, height: 150, width: 250, crop: :thumb, class: "rounded" %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-sm-6 pt-4">
+     <%= form_tag cars_path, method: :get do %>
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a car"
+        %>
+        <div class="row justify-content-center">
+          <div class="col-sm-2 pt-1 pb-4">
+            <%= submit_tag "Search", class: "btn-ghost" %>
+          </div>
+        </div>
     <% end %>
-    <div class="card-trip-infos">
-      <div>
-        <h2><%= car.name %></h2>
-        <h7>Year: <%= car.year %></h3>   
+
+    <% @cars.each do |car| %>
+      <div class="card-trip mt-3 mx-auto">
+        <% car.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 150, width: 250, crop: :thumb, class: "rounded" %>
+        <% end %>
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= car.name %></h2>
+            <h7>Year: <%= car.year %></h3>   
+          </div>
+        <div>
+          <p><%= link_to "Details", car_path(car), class: "btn-ghost" %></p>
+        </div>
+        <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
+        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
       </div>
-      <div>
-        <p><%= link_to "Details", car_path(car), class: "btn-ghost" %></p>
-      </div>
-      <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
-      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+    <% end %>
     </div>
   </div>
-<% end %>
+</div>
