--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div id="cover">
   <% if !current_user.present? %>
-    <%= render 'shared/signup', user: User.new %>
+    <%= render 'shared/search' %>
   <% else %>
     <%= render 'shared/welcome' %>
   <% end %>
