--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,6 +3,20 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 400px;
+
+  &:hover {
+    h2 {
+      color: scale-color($link-color, $lightness: +20%);      
+    }
+
+    p {
+      color: scale-color($link-color, $lightness: +20%);      
+    }
+
+    h7 {
+      color: scale-color($link-color, $lightness: +20%);      
+    }
+  }
 }
 
 .card-thumbnail {
