--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,16 +1,20 @@
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-sm-10">
-     <%= form_tag cars_path, method: :get do %>
-     <div class="search-form-control form-group">
-        <%= text_field_tag :query,
-          params[:query],
-          class: "form-control",
-          placeholder: "e.g. car name, year"
-        %>
-      <%= submit_tag "Search", class: "btn btn-flat" %>
-     </div>
-    <% end %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/assets/woody.jpg);">
+  <div class="container">
+    <h1></h1>
+    <p></p>
+    <div class="row justify-content-center">
+      <div class="col-sm-10">
+        <%= form_tag cars_path, method: :get do %>
+        <div class="search-form-control form-group">
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "e.g. car name, year"
+          %>
+          <%= submit_tag "Search", class: "btn btn-flat" %>
+        </div>
+       <% end %>
+      </div>
     </div>
   </div>
 </div>
