Call to action + grid added

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,11 +21,11 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #65DEF1;
+  background: #D4420C;
   transition: background 0.3s ease;
 }
 
 .btn-flat:hover {
-  background: #32D3EC;
+  background: #AE360A;
   color: white;
 }
