--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,20 +1,24 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 200px 0;
+  padding: 150px 0;
   margin-bottom: 32px;
 }
 .banner h1 {
-  margin: 0;
+  text-align: center;
   color: white;
+
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
+  font-size: 48px;
+  font-weight: 400;
+  font-family: $headers-font;
 }
 
 .banner p {
+  text-align: center;
   font-size: 20px;
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-family: $headers-font;
 }
