--- a/app/assets/stylesheets/components/_grid-container.scss
+++ b/app/assets/stylesheets/components/_grid-container.scss
@@ -5,3 +5,14 @@
   grid-gap: 16px;
   
 }
+@media(max-width: 992px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media(max-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
