--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -8,7 +8,7 @@
           class: "form-control",
           placeholder: "e.g. car name, year"
         %>
-      <%= submit_tag "Search", class: "btn btn-flat" %>
+      <%= submit_tag "Find your ride", class: "btn btn-flat" %>
      </div>
     <% end %>
     </div>
@@ -28,7 +28,7 @@
           <p><%= link_to "Details", car_path(car), class: "btn-ghost" %></p>
         </div>
         <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        <img src="https://avatars3.githubusercontent.com/u/31419836?v=4" class="card-trip-user avatar-bordered" />
         </div>
       </div>
     <% end %>
