--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,17 +1,17 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/assets/woody.jpg);">
   <div class="container">
-    <h1></h1>
-    <p></p>
+    <h1>DRIVE YOUR DREAM CLASSIC CAR</h1>
+    <p>Vintage car rentals</p>
     <div class="row justify-content-center">
       <div class="col-sm-10">
         <%= form_tag cars_path, method: :get do %>
-        <div class="search-form-control form-group">
+        <div class="search-form-control form-group" style="margin-top: 48px">
           <%= text_field_tag :query,
             params[:query],
             class: "form-control",
             placeholder: "e.g. car name, year"
           %>
-          <%= submit_tag "Search", class: "btn btn-flat" %>
+          <%= submit_tag "Find your ride", class: "btn btn-flat" %>
         </div>
        <% end %>
       </div>
