--- a/app/assets/stylesheets/components/_grid-container.scss
+++ b/app/assets/stylesheets/components/_grid-container.scss
@@ -1,10 +1,11 @@
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 16px;
-  grid-gap: 16px;
+  grid-template-columns: 1fr 1fr;
+  padding: 80px;
+  grid-gap: 40px;
   
 }
+
 @media(max-width: 992px) {
   .cards {
     grid-template-columns: 1fr 1fr;
