--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -14,6 +14,8 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="grid-container">
     <% @cars.each do |car| %>
       <div class="card-trip mt-3 mx-auto">
         <% car.photos.each do |photo| %>
@@ -32,6 +34,5 @@
         </div>
       </div>
     <% end %>
-    </div>
   </div>
 </div>
