--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,14 +1,16 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-6 pt-4">
-      <h3>Booking details</h3>
-      <% @booking.car.photos.each do |photo| %>
-        <%= cl_image_tag photo.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
-      <% end %>
-      <p><strong><%= @booking.car.name %></strong></p>
-      <p><strong>Booked from:</strong> <%= @booking.start_date %></p>
-      <p><strong>Until:</strong> <%= @booking.end_date %></p>
-      <p><strong>Total amount:</strong> <%= @booking.amount %> EUR</p>
+    <div class="col-sm-6">
+      <div class="cardb">
+        <% @booking.car.photos.each do |photo| %>
+          <%= cl_image_tag photo.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
+        <% end %>
+        <p><strong>Car:</strong> <%= @booking.car.name %> <%= @booking.car.model %> <%= @booking.car.year %></p>
+        <p><strong>Booked from:</strong> <%= @booking.start_date %></p>
+        <p><strong>Until:</strong> <%= @booking.end_date %></p>
+        <p><strong>Total amount:</strong> <%= @booking.amount %> EUR</p>
+        <%= link_to "Back to listings", cars_path, class: "btn-ghost" %>
+      </div>
     </div>
   </div>
 </div>
