--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -62,12 +62,13 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  margin: 34px;
 }
 
 .card-product img {
   pading: 4px;
   height: 100%;
-  width: 300px;
+  width: 400px;
   object-fit: cover;
 }
 
@@ -87,4 +88,17 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+}
+
+.cardb img {
+  margin-top: 56px;
+  margin-bottom: 32px;
+}
+
+.cardb p {
+  padding-left: 12px;
+}
+
+.card-listings {
+  margin-top: 56px;
 }
