--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #F5F5F5;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -18,7 +18,7 @@
 }
 
 .navbar-brand {
-  font-size: 24px;
+  font-size: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
