--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -13,6 +13,7 @@
           <p>Until: <%= booking.end_date %></p>
           <p>Total amount: <%= booking.amount %> EUR</p>
         </div>
+        <p><%= link_to "View booking", car_booking_path(booking.car, booking), class: "btn-ghost" %></p>
       </div>
       <% end %>
     </div>
