--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -38,9 +38,9 @@
   <div class="row">
     <div class="col-12 col-md-8 col-lg-8">
       <%= simple_form_for [@car, @booking] do |f| %>
-        <%= f.input :start_date, label: "Start of your reservation ?", as: :date, html5: true %>
-        <%= f.input :end_date, label: "End of your reservation ?",as: :date, html5: true %>
-        <%#= f.input :amount, disabled: true %>
+        <%= f.input :start_date, label: "Start of your reservation ?", as: :date, html5: true, order: [:day, :month, :year]  %>
+        <%= f.input :end_date, label: "End of your reservation ?", as: :date, html5: true, order: [:day, :month, :year] %>
+        <%= f.input :amount, label: "Total", disabled: true %>
         <%= f.button :submit, class: "btn btn-primary" %>
       <% end %>
     </div>
