--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -15,10 +15,10 @@
         <%= link_to "Back to listings", cars_path, class: "btn-ghost" %>
       </div>
     </div>
-
-  <div id="map"
-    style="width: 100%; height: 600px;"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>  
+    <div id="map"
+      style="width: 100%; height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">        
+    </div>  
   </div>
 </div>
