--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -12,11 +12,12 @@
         <p><strong>Booked from:</strong> <%= @booking.start_date %></p>
         <p><strong>Until:</strong> <%= @booking.end_date %></p>
         <p><strong>Total amount:</strong> <%= @booking.amount %> EUR</p>
-        <%= link_to "Back to listings", cars_path, class: "btn-ghost" %>
+        <%= link_to "Listings", cars_path, class: "btn-ghost" %>
+        <%= link_to "Bookings", bookings_path, class: "btn-ghost" %>
       </div>
     </div>
     <div id="map"
-      style="width: 100%; height: 600px;"
+      style="width: 700px; height: 600px;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">        
     </div>  
