map size adjusted

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -90,8 +90,9 @@
   padding: 16px;
 }
 
+
 .cardb img {
-  margin-top: 56px;
+  margin-top: 180px;
   margin-bottom: 32px;
 }
 
@@ -101,4 +102,8 @@
 
 .card-listings {
   margin-top: 56px;
+}
+
+#map {
+  margin-top: 64px;
 }
