--- a/app/assets/stylesheets/components/_grid-container.scss
+++ b/app/assets/stylesheets/components/_grid-container.scss
@@ -6,6 +6,11 @@
   
 }
 
+.main-container {
+  display: flex;
+  justify-content: space-around;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .grid-container {
