--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,25 +1,22 @@
    
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="cardb">
-        <% @booking.car.photos.each do |photo| %>
-          <%= cl_image_tag photo.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
-        <% end %>
-        <p><strong>Car:</strong> <%= @booking.car.name %> <%= @booking.car.model %> <%= @booking.car.year %></p>
-        <p><strong>Transmission:</strong> <%= @booking.car.transmission %></p>
-        <p><strong>Engine type:</strong> <%= @booking.car.engine_type %></p>
-        <p><strong>Booked from:</strong> <%= @booking.start_date %></p>
-        <p><strong>Until:</strong> <%= @booking.end_date %></p>
-        <p><strong>Total amount:</strong> <%= @booking.amount %> EUR</p>
-        <%= link_to "Listings", cars_path, class: "btn-ghost" %>
-        <%= link_to "Bookings", bookings_path, class: "btn-ghost" %>
-      </div>
+<div class="main-container">
+    <div class="cardb">
+      <% @booking.car.photos.each do |photo| %>
+        <%= cl_image_tag photo.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
+      <% end %>
+      <p><strong>Car:</strong> <%= @booking.car.name %> <%= @booking.car.model%> <%= @booking.car.year %></p>
+      <p><strong>Transmission:</strong> <%= @booking.car.transmission %></p>
+      <p><strong>Engine type:</strong> <%= @booking.car.engine_type %></p>
+      <p><strong>Booked from:</strong> <%= @booking.start_date %></p>
+      <p><strong>Until:</strong> <%= @booking.end_date %></p>
+      <p><strong>Total amount:</strong> <%= @booking.amount %> EUR</p>
+      <%= link_to "Listings", cars_path, class: "btn-ghost" %>
+      <%= link_to "Bookings", bookings_path, class: "btn-ghost" %>
     </div>
     <div id="map"
-      style="width: 700px; height: 600px;"
+      style="width: 1000px; height: 700px;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">        
     </div>  
-  </div>
+
 </div>
