Banner image path changed

--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/assets/woody.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path 'woody.jpg' %>);">
   <div class="container">
     <h1>DRIVE YOUR DREAM CLASSIC CAR</h1>
     <p>Vintage car rentals</p>
