edit link commented out

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -34,7 +34,7 @@
 <p><%= @car.transmission %> km</p>
 
 
-<%= link_to "Edit", edit_car_path(@car) %> |
+<%=# link_to "Edit", edit_car_path(@car) %> 
 <%= link_to "Back to the vehicles list", cars_path %> |
 <%= link_to "Delete", car_path(@car), method: "delete" %>
       </div>
