--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,5 @@
 .btn-ghost {
-  color: #0E0000;
+  color: red;
   border: 1px solid #4A4A4A;
   margin-top: 8px;
   padding: 4px 16px;
@@ -29,3 +29,5 @@
   background: #AE360A;
   color: white;
 }
+
+
