--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,19 +4,19 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 400px;
 
-  
+
 
   &:hover {
     h2 {
-      color: scale-color($link-color, $lightness: +20%);      
+      color: scale-color($link-color, $lightness: +20%);
     }
 
     p {
-      color: scale-color($link-color, $lightness: +20%);      
+      color: scale-color($link-color, $lightness: +20%);
     }
 
     h7 {
-      color: scale-color($link-color, $lightness: +20%);      
+      color: scale-color($link-color, $lightness: +20%);
     }
   }
 }
@@ -25,7 +25,7 @@
   height: 150px;
   width: 100%;
   object-fit: fill;
-} 
+}
 
 .card-trip h2 {
   font-size: 16px;
@@ -54,3 +54,38 @@
   top: -20px;
   width: 40px;
 }
+
+.card-product {
+  overflow: hidden;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+}
+
+.card-product img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-product h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-product .card-product-infos {
+  padding: 16px;
+}
+
+
