--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -18,22 +18,26 @@
   <div class="grid-container">
     <% @cars.each do |car| %>
       <div class="card-trip mt-3 mx-auto">
-        <% if car.photos.attached? %>
-            <%= cl_image_tag car.photos.first.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
-        <% else %>
-          <%= image_tag "car.png" %>
+        <%= link_to car_path(car) do %>
+          <div>
+            <% if car.photos.attached? %>
+                <%= cl_image_tag car.photos.first.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
+            <% else %>
+              <%= image_tag "car.png" %>
+            <% end %>
+            <div class="card-trip-infos">
+              <div>
+                <h2><%= car.name %></h2>
+                <h7>Year: <%= car.year %></h3>
+              </div>
+              <div>
+                <p><%= link_to "Details", car_path(car), class: "btn-ghost" %></p>
+              </div>
+              <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
+              <img src="https://avatars3.githubusercontent.com/u/31419836?v=4" class="card-trip-user avatar-bordered" />
+            </div>
+          </div>
         <% end %>
-        <div class="card-trip-infos">
-          <div>
-            <h2><%= car.name %></h2>
-            <h7>Year: <%= car.year %></h3>
-          </div>
-          <div>
-            <p><%= link_to "Details", car_path(car), class: "btn-ghost" %></p>
-          </div>
-          <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
-          <img src="https://avatars3.githubusercontent.com/u/31419836?v=4" class="card-trip-user avatar-bordered" />
-          </div>
       </div>
     <% end %>
   </div>
