--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -21,7 +21,7 @@
         <%= link_to car_path(car) do %>
           <div>
             <% if car.photos.attached? %>
-                <%= cl_image_tag car.photos.first.key, height: 200, width: 400, crop: :thumb, class: "rounded" %>
+                <%= cl_image_tag car.photos.first.key, height: 200, width: 300, crop: :thumb, class: "rounded" %>
             <% else %>
               <%= image_tag "car.png" %>
             <% end %>
@@ -31,10 +31,9 @@
                 <h7>Year: <%= car.year %></h3>
               </div>
               <div>
-                <p><%= link_to "Details", car_path(car), class: "btn-ghost" %></p>
+                <p><%#= link_to "Details", car_path(car), class: "btn-ghost" %></p>
               </div>
-              <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>
-              <img src="https://avatars3.githubusercontent.com/u/31419836?v=4" class="card-trip-user avatar-bordered" />
+              <h2 class="card-trip-pricing"><%= car.price.to_i %> EUR / day</h2>        
             </div>
           </div>
         <% end %>
