--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,30 +1,50 @@
-.card-trip {
-  overflow: hidden;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.card {
+  cursor: pointer;
   width: 400px;
-
-
-
-  &:hover {
-    h2 {
-      color: scale-color($link-color, $lightness: +20%);
-    }
-
-    p {
-      color: scale-color($link-color, $lightness: +20%);
-    }
-
-    h7 {
-      color: scale-color($link-color, $lightness: +20%);
-    }
-  }
+  height: 200px;
 }
 
-.card-thumbnail {
-  height: 150px;
+.front,.back {
   width: 100%;
-  object-fit: fill;
+  height: 100%;
+  overflow: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+  transition: transform .6s linear;
+}
+
+.front img {
+  height: 100%;
+}
+
+.front {
+  transform: perspective(600px) rotateY(0deg);
+}
+
+.back{
+  background: #f1f1f1;
+  transform: perspective(600px) rotateY(180deg);
+}
+
+.back-content {
+  color: black;
+  text-align: center;
+  width: 100%;
+}
+
+.card:hover > .front {
+  transform: perspective(600px) rotateY(-180deg);
+}
+
+.card:hover > .back {
+  transform: perspective(600px) rotateY(0deg);
 }
 
 .card-trip h2 {
@@ -55,10 +75,7 @@
   width: 40px;
 }
 
-/*.card-product {*/
-/*  overflow: hidden;
-  height: 120px;
-=======*/
+
 .card-product {
   overflow: hidden;
   height: 160px;
