--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,8 +6,6 @@
 }
 .banner h1 {
   text-align: center;
-  color: white;
-
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 48px;
   font-weight: 400;
@@ -15,10 +13,38 @@
 }
 
 .banner p {
+  margin: 24px;
   text-align: center;
   font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-family: $headers-font;
+}
+
+.banner-part {
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 78px;
+  line-height: 1;
+  color: rgb(35, 31, 32);
+}
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
