--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="banner-part">
-    <h1>DRIVE YOUR DREAM CLASSIC CAR</h1>
+    <h1>DRIVE YOUR DREAM <br> CLASSIC CAR</h1>
     <p>Book a classic car from the comfort of your home</p> 
   </div>
   <%= render 'shared/search' %>
@@ -23,5 +23,21 @@
         </div>
       </div>      
     <% end %>
+  </div>
+</section>
+<section class="home-car">
+  <div class="car-section">
+    <div class="car-photo">
+      <%= image_tag "woody.jpg" %>
+    </div>
+    <div class="car-section-text">
+      <div class="car-section-text2">
+        <div class="car-section-title">
+          <h2>Renting a vintage car was never easier</h2>
+        </div>
+        <p>Vintage cars have lived full lives and that history comes with character and quirks worthy of celebration. For those who care about driving, few experiences in life can match the joy of cruising your favourite roads in a classic vintage car.</p>
+        <p>If you are looking for that special experience that puts a smile on your face, booking a classic car with MyOldCar is only one click away. We take the administrative burdon away so that you can fully enjoy riding your favourite car. </p>
+      </div>
+    </div>
   </div>
 </section>
