--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,16 +7,16 @@
 .banner h1 {
   text-align: center;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 48px;
+  font-size: 56px;
   font-weight: 400;
-  font-family: $headers-font;
+  font-family: $h-font;
 }
 
 .banner p {
   margin: 24px;
   text-align: center;
   font-size: 20px;
-  font-family: $headers-font;
+  font-family: $body-font;
 }
 
 .banner-part {
@@ -26,6 +26,9 @@
   font-size: 78px;
   line-height: 1;
   color: rgb(35, 31, 32);
+}
+.banner-part h1 {
+  margin-bottom: 34px;
 }
 
 // Smallest device
