--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,11 +1,14 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oldenburg&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Raleway&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
+$body-font: 'Raleway', sans-serif;
 $headers-font: "Nunito", "Helvetica", "sans-serif";
 $p-font: "Oldenburg", "cursive";
+$h-font: 'Abril Fatface', cursive;
+
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
