--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,8 +36,42 @@
           <h2>Renting a vintage car was never easier</h2>
         </div>
         <p>Vintage cars have lived full lives and that history comes with character and quirks worthy of celebration. For those who care about driving, few experiences in life can match the joy of cruising your favourite roads in a classic vintage car.</p>
-        <p>If you are looking for that special experience that puts a smile on your face, booking a classic car with MyOldCar is only one click away. We take the administrative burdon away so that you can fully enjoy riding your favourite car. </p>
+        <p>If you are looking for that special experience that puts a smile on your face, booking a classic car with MyOldCar is only one click away. We take the administrative burden away so that you can fully enjoy riding your favourite car. </p>
       </div>
     </div>
   </div>
 </section>
+<section class="car-section">
+  <div class="car-section-one">
+    <div class="car-section-one-h">
+      <h2>Classic & vintage cars</h2>
+      <div class="car-section-one-p">
+        <p>Get the best out of the classic car experience without administrative burden.</p>
+      </div>
+    </div>
+    <div class="section-description">
+      <div class="section-description-one">
+        <div class="section-description-text">
+          <div class="section-one">
+            <div class="section-one-title">The vintage wedding car</div>
+            <p class="section-one-p">The most special day in your life demands an equally special getaway vehicle to help cap off the night. Find a timeless classic or vintage car on MyOldCar to use as your wedding car and make your big day as memorable as possible.</p>
+          </div>
+        </div>
+          <div class="section-description-text">
+            <div class="section-one-title">Perfect for photoshoots</div>
+            <p class="section-one-p">If you’ve got a work, art, or personal project and need an attractive car to provide that perfect backdrop, book an affordable classic car that perfectly fits the vibe you’re going for. Or, find one just to spice up your Instagram feed.</p>
+          </div>
+          <div class="section-description-text">
+            <div class="section-one-title">Give yourself a treat</div>
+            <p class="section-one-p">Give yourself the gift of vintage motoring and book a classic car for your next birthday, anniversary, or celebration-worthy occasion. You’ll look and feel as dapper and stylish as you really are.</p>
+          </div>   
+      </div>
+    </div>
+    <div class="section-action-btn">
+      <%= link_to "Browse classic cars", cars_path, class: "btn-ghost"%>   
+    </div>
+  </div>
+</section>
+<br>
+<br>
+<br>
